--- a/client/src/Dashboard/Body.css
+++ b/client/src/Dashboard/Body.css
@@ -73,6 +73,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding:0.5rem;
     margin: 0.05rem 0;
 }
