--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,10 @@
   padding: 0;
   font-family: 'Inter', sans-serif;
 }
+body{
+  background: rgb(247, 252, 252);
+  overflow:hidden;
+}
 .h-text, h1, h2, h3, h4, h5,h6{
   color: #39464d;
 }
@@ -16,4 +20,8 @@
     , #1380F9 40%, #1EA5FC);
         box-shadow: 0 0.5rem 1rem #1ea5fc45;
       border-radius: 40px;
+}
+
+main{
+  display: flex;
 }
