--- a/client/src/Dashboard/Body.css
+++ b/client/src/Dashboard/Body.css
@@ -1,8 +1,8 @@
 ::-webkit-scrollbar {
     width: 5px;
     height: 2px;
-}
-::-webkit-scrollbar-button {
+  }
+  ::-webkit-scrollbar-button {
     width: 0px;
     height: 0px;
   }
@@ -10,41 +10,42 @@
     background: #2d3748;
     border: 0px none #ffffff;
     border-radius: 50px;
-}
+  }
   ::-webkit-scrollbar-thumb:hover {
-      background: #000;
+    background: #2d3748;
   }
   ::-webkit-scrollbar-thumb:active {
-    background: #000000;
+    background: #2d3748;
   }
   ::-webkit-scrollbar-track {
-      border: 0px none #ffffff;
-      border-radius: 50px;
+    background: rgba(143, 143, 143, 0.5);
+    border: 0px none transparent;
+    border-radius: 50px;
   }
- 
-::-webkit-scrollbar-corner {
+  ::-webkit-scrollbar-track:hover {
+    background:transparent;
+  }
+  ::-webkit-scrollbar-track:active {
     background: transparent;
-}
+  }
+  ::-webkit-scrollbar-corner {
+    background: transparent;
+  }
 
 .body{
     max-width: 100%;
-    height: 74vh;
+    height: 80vh;
     overflow: hidden;
     position: relative;
-    padding: 4rem;
     display: flex;
-    justify-content: end;
-    align-items: flex-end;
     flex-direction: column;
+    align-items: center;
     margin-top: 1rem;
 }
 .body .title{
-    position: absolute;
-    top: 0;
     font-size: 2rem;
-    left: 50%;
-    transform: translateX(-50%);
-    font-weight: 500;
+    margin: 1rem 0;
+    font-weight: 600;
     color: #333;
     text-transform: capitalize;
 }
@@ -53,9 +54,10 @@
     height: 100%;
     padding: 1rem;
     border-radius: 1rem;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 0.6rem rgba(0,0,0,0.1);
     overflow-y: scroll;
     position: relative;
+    background: #fff;
 }
 .line-clamp-1{
     display: -webkit-box;
@@ -142,25 +144,16 @@ flex: 0.4;
     height: 200px;
     filter: drop-shadow(2px, 2px, 15px, rgba(0,0,0,0.2));
 }
-@media(max-width: 1024px){
-    .body{
-        padding:3rem;
-    }
-}
+
 @media (max-width: 767.98px) { 
     .body{
         margin:auto;
         position: relative;
-        padding: 3rem 1rem;
-    }
-    .body .title{
-        left: 1.5rem;
-        font-size: 1.8rem;
-        transform: translateX(0);
+        padding: 0;
     }
 .body .mailBox{
    overflow-x: scroll;
-   width: 100%;
+   width: 90%;
 }
 
 .row td{
