--- a/client/src/Dashboard/Sidebar.css
+++ b/client/src/Dashboard/Sidebar.css
@@ -1,39 +1,50 @@
 .sidebar {
-    min-width: 5rem;
-    width: clamp(80px, 10vw, 100px);
+    min-width: 15rem;
     height: 100vh;
-    position: fixed;
+    position: relative;
     z-index: 99;
-    top: 0;
-    left: 0;
     box-shadow: 0 0 1rem rgba(106, 106, 141, 0.2);
     background: #fff;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     padding: 3rem 0;
+    overflow-x: hidden;
   }
   .sidebar::-webkit-scrollbar {
     display: none;
   }
   .sidebar__icon {
-    width: 3rem;
-    height: auto;
-    box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.15);
+    position: absolute !important;
+    top: 2rem;
+    left: 2rem;
     cursor: pointer;
+    z-index: 1000;
+    
   }
   .sidebar__menu {
-      margin-top: 2rem;
+      margin-top: 4rem;
     display: flex;
     flex-flow: column nowrap;
+    width: 100%;
   }
   .sidebar__menuItem {
-    margin: 1rem auto;
+    padding: 1rem 1.5rem;
     position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+  }
+  .sidebar__menu h3{
+    margin-left: 1rem;
   }
   .sidebar__menuIcon {
     transform: scale(0.9);
     transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1) !important;
+  }
+  .sidebar__menuItem.active h3 {
+    color: #1380F9;
   }
   .sidebar__menuItem.active .sidebar__menuIcon {
     transform: scale(1);
@@ -44,33 +55,7 @@
   .sidebar__menuItem:hover .sidebar__menuIcon {
     transform: scale(1.05);
   }
-  .sidebar__menuItem .sidebar__itemValue {
-    position: absolute;
-    padding: 4px 4px 5px 4px;
-    font-size: 10px;
-    text-align: center;
-    min-width: 18px;
-    height: 19px;
-    background: #f90;
-    color: #fff;
-    font-weight: 700;
-    left: calc(100% - 12px);
-    bottom: calc(100% - 12px);
-    margin: 0;
-    border-radius: 99px;
-  }
-  .sidebar__avatar {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 99px;
-    box-shadow: 0 0.5rem 0.5rem rgba(26, 26, 44, 0.05);
-    transition: all 0.2s;
-    object-fit: contain;
-  }
-  .sidebar__avatar:hover {
-    box-shadow: 0 0.5rem 0.75rem rgba(26, 26, 44, 0.15);
-    transition: scale(1.05);
-  }
+ 
   .app__toolTip {
     border-radius: 0.5rem !important;
     box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15) !important;
@@ -81,26 +66,13 @@
   
   @media (max-width: 767.98px) {
     .sidebar {
-      width: 80px;
-      transform: translateX(-80px);
-      padding: 1.5rem 0;
+      position: absolute;
+      left: -15rem ;
       transition: all 0.2s;
     }
     .sidebar.active {
-      transform: translateX(0);
+      left: 0;
     }
-    .sidebar__icon {
-      transform: translateX(80px);
-      transition: all 0.2s;
-      width: 2.5rem;
-      padding: 0.5rem;
-      border-radius: 99px;
-      box-shadow: 0 0.25rem 0.5rem rgba(26, 26, 44, 0.1);
-      background: #fff;
-    }
-    .sidebar.active .sidebar__icon {
-      transform: translateX(0);
-      box-shadow: 0;
-    }
+    
   }
   
