--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -2,7 +2,7 @@
     position: relative;
   }
   .header__nav {
-    padding: 2rem;
+    padding: 2rem 6rem;
     padding-bottom: 0;
     display: flex;
     align-items: center;
@@ -44,13 +44,14 @@
   @media (max-width: 767.98px) {
     .header__nav {
       padding: 1.5rem;
+      padding-right: 6rem;
     }
     .header__nav h3 {
       display: none;
     }
     .header__search {
       margin-right: 0;
-      width: 50%;
+      width: 60%;
     }
   }
   
